crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_concat.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..16,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..16,
                value: StringLiteral(
                    ExprStringLiteral {
                        node_index: NodeIndex(None),
                        range: 0..16,
                        value: StringLiteralValue {
                            inner: Concatenated(
                                ConcatenatedStringLiteral {
                                    strings: [
                                        StringLiteral {
                                            range: 0..8,
                                            node_index: NodeIndex(None),
                                            value: "Hello ",
                                            flags: StringLiteralFlags {
                                                quote_style: Single,
                                                prefix: Empty,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                        StringLiteral {
                                            range: 9..16,
                                            node_index: NodeIndex(None),
                                            value: "world",
                                            flags: StringLiteralFlags {
                                                quote_style: Single,
                                                prefix: Empty,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ],
                                    value: "Hello world",
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
