crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..20,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..20,
                value: StringLiteral(
                    ExprStringLiteral {
                        node_index: NodeIndex(None),
                        range: 0..20,
                        value: StringLiteralValue {
                            inner: Single(
                                StringLiteral {
                                    range: 0..20,
                                    node_index: NodeIndex(None),
                                    value: "Hello, world!",
                                    flags: StringLiteralFlags {
                                        quote_style: Single,
                                        prefix: Unicode,
                                        triple_quoted: true,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
