crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_t_string_concat_1.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(
                4,
            ),
            range: 0..17,
            value: TString(
                ExprTString {
                    node_index: NodeIndex(
                        3,
                    ),
                    range: 0..17,
                    value: TStringValue {
                        inner: Concatenated(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..8,
                                        node_index: NodeIndex(
                                            0,
                                        ),
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                TString(
                                    TString {
                                        range: 9..17,
                                        node_index: NodeIndex(
                                            2,
                                        ),
                                        elements: [
                                            Literal(
                                                InterpolatedStringLiteralElement {
                                                    range: 11..16,
                                                    node_index: NodeIndex(
                                                        1,
                                                    ),
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                        flags: TStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
